update background catalogo

--- a/Educación/catalogo-educacion.html
+++ b/Educación/catalogo-educacion.html
@@ -242,6 +242,7 @@
     .icontec-card-content {
       padding: 1rem;
       text-align: left;
+      background-color: #cce5ff;
     }
     .info-tags {
       display: flex;
@@ -333,7 +334,7 @@
           <div class="icontec-card">
             <div class="icontec-card-img-container">
               <img class="icontec-card-img"
-                   src="assets/images/aa.jpg"
+                   src="https://campus.icontecvirtual.edu.co/uploads/courses/439382.jpg"
                    alt="Normatividad Técnica"/>
               <div class="icontec-card-overlay">
                 <span class="icontec-card-overlay-title">Normatividad Técnica</span>
