--- a/Educación/Carrusel-educación.html
+++ b/Educación/Carrusel-educación.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8"/>
-  <title>Catálogo de Educación – Carrusel</title>
+  <title>Carrusel de Educación </title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
   <!-- Bootstrap CSS -->
@@ -199,7 +199,7 @@
 </head>
 
 <body>
-  <h1>Catálogo de Educación</h1>
+  <h1>Carrusel de Educación</h1>
 
   <!-- pausa/play -->
   <button id="carousel-pause" aria-label="Pausa/Play">
