--- a/Educación/Carrusel- Index.html
+++ b/Educación/Carrusel- Index.html
@@ -20,8 +20,8 @@
 }
 
 .carrusel .carousel-item {
-  height: 60vh;
-  min-height: 300px;
+  height: 50vh; /* antes 60vh o 100vh */
+  min-height: 280px;
   background-size: cover;
   background-position: center center;
 }
@@ -29,7 +29,7 @@
 /* Altura más baja en móviles */
 @media (max-width: 768px) {
   .carrusel .carousel-item {
-    height: 40vh;
+    height: 35vh;
   }
 }
 
