--- a/Educación/single-educacion-imagen.html
+++ b/Educación/single-educacion-imagen.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <style>
     body {
       font-family: 'Catamaran', sans-serif;
@@ -36,7 +36,7 @@
     }
 
     .tag-gratis {
-      background-color: #FF4841;
+      background-color: #FF6600;
     }
 
     .tag-modalidad:hover,
@@ -55,6 +55,21 @@
       box-shadow: 0 .125rem .375rem rgba(0,0,0,.1);
       text-align: center;
     }
+    /*imagen fondo
+  .header--image {
+    position: absolute;
+    top: 0px;
+    right: 11px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    padding-right: 55px;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    background-position: right center !important;
+    background-origin: content-box !important;
+}*/
+
 
     /* Pestaña superior */
     .single-sidebar .sidebar-tab {
@@ -73,6 +88,8 @@
       white-space: nowrap;
       line-height: 1;
     }
+
+   
 
     /* Imagen centrada y redondeada */
     .course-image {
@@ -138,20 +155,92 @@
     #curso-gratis-info {
       scroll-margin-top: 80px;
     }
+
+/*--------Accordion-------*/
+.acc-kontainer {
+  width: 100%;
+  margin: auto;
+}
+.acc-kontainer .acc-body {
+  width: 98%;
+  width: calc(100% - 20px);
+  margin: 0 auto;
+  height: 0;
+  color: rgba(0, 0, 0, 0);;
+  background-color: #cce5ff;
+  line-height: 28px;
+  padding: 0 20px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+.acc-kontainer label {
+  cursor: pointer;
+  background-color: #e9f7fd;
+  border-bottom: 1px solid #938afc;
+  border-radius: 0.3rem;
+  display: block;
+  padding: 15px;
+  width: 100%;
+  color: #000000;
+  font-weight: 400;
+  box-sizing: border-box;
+  z-index: 100;
+}
+
+.acc-kontainer input{
+  display: none;
+}
+
+.acc-kontainer label:before {
+  font-family: 'FontAwesome';
+  content: '\f067';
+  font-weight: bolder;
+  float: right;
+}
+
+.acc-kontainer input:checked+label {
+  background-color: #e9f7fd;
+}
+
+.acc-kontainer input:checked+label:before {
+  font-family: 'FontAwesome';
+  content: '\f00d';
+  transition: 0.5s;
+}
+
+.acc-kontainer input:checked~.acc-body {
+  height: auto;
+  color: #000000;
+  font-size: 16px;
+  padding: 20px;
+  transition: 0.5s;
+}
+.accordion-body {
+  background-color: #cce5ff;
+  border-radius: 0.375rem;
+}
+
+
   </style>
 </head>
 <body>
 
 <div class="container py-4">
-  <div class="row gx-4 gy-4">
+
+  <div class="row gx-4 gy-4" >
+  <!--<div class="header--image" style="background: url(file:///C:/Users/jramirezb/OneDrive%20-%20ICONTEC/Escritorio/JR/campus-tienda/assets/images/image.png);"></div>-->
     <!-- IZQUIERDA -->
     <div class="col-12 col-lg-8">
       <h1 class="h2 mb-3">Normatividad Técnica</h1>
 
       <!-- Tags modalidad, tipo y gratuito -->
       <div class="d-flex flex-wrap align-items-center gap-3 mb-4 info-box">
-        <div class="tag-modalidad">Modalidad: Virtual asincrónico</div>
-        <div class="tag-tipo">Tipo: Curso</div>
+        <div class="tag-modalidad"> Curso - Virtual asincrónico </div>
+
+        <!--<div class="tag-tipo">Tipo: Curso</div>-->
+        
+        <a href="#full-text-info" class="tag-tipo text-white text-decoration-none">Mas detalles</a>
         <a href="#curso-gratis-info" class="tag-gratis text-white text-decoration-none">+ Curso gratuito</a>
       </div>
 
@@ -177,7 +266,65 @@
           <li><strong>Cupos disponibles:</strong> 20</li>
         </ul>
       </section>
+
+
+  <!-- Descripcion completa acordion -->
+  <section id="full-text-info" class="accordion mb-4" id="accordionCurso">
+  <!-- OBJETIVOS -->
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+        aria-expanded="true" aria-controls="collapseOne">
+        OBJETIVOS
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+      data-bs-parent="#accordionCurso">
+      <div class="accordion-body">
+        Conocer el significado con un pensamiento estratégico basado en los riesgos en el sistema de gestión.
+      </div>
     </div>
+  </div>
+
+  <!-- CONTENIDO -->
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        CONTENIDO
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+      data-bs-parent="#accordionCurso">
+      <div class="accordion-body">
+        <p>PENSAMIENTO BASADO EN RIESGOS</p>
+        <p>Requisitos sobre riesgo en ISO 9001:2015, ISO 14001:2015 y ISO 45001:2018.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- ¿QUIÉN PUEDE PARTICIPAR? -->
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        ¿QUIÉN PUEDE PARTICIPAR?
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+      data-bs-parent="#accordionCurso">
+      <div class="accordion-body">
+        <p>El curso está dirigido a individuos o equipos de alto desempeño que lideran organizaciones o sistemas de gestión, responsables de apoyar el logro de resultados estratégicos.</p>
+        <p>También está orientado a mejorar las competencias de quienes brindan servicios de asesoría relacionados con la gestión de riesgos.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+</div> <!-- Fin izquierda-->
+
+  
 
     <!-- DERECHA: precio y compra -->
     <div class="col-12 col-lg-4">
