--- a/Educación/Dashboard.html
+++ b/Educación/Dashboard.html
@@ -188,7 +188,7 @@
           </li>
           <li class="nav-small-cap">Auth</li>
           <li class="sidebar-item">
-            <a href="./authentication-login.html" class="sidebar-link">
+            <a href="#" class="sidebar-link">
               <i class="bi bi-box-arrow-right"></i> Salir
             </a>
           </li>
@@ -282,7 +282,7 @@
                       </div>
                     </td>
                     <td>10/03/2025</td>
-                    <td><span class="badge bg-info">Bajo</span></td>
+                    <td><span class="badge bg-info">Terminado</span></td>
                     <td class="text-end fw-medium">$3.9K</td>
                   </tr>
                   <tr>
@@ -295,7 +295,7 @@
                       </div>
                     </td>
                     <td>23/05/2025</td>
-                    <td><span class="badge bg-primary">Medio</span></td>
+                    <td><span class="badge bg-primary">En progreso</span></td>
                     <td class="text-end fw-medium">$24.5K</td>
                   </tr>
                 </tbody>
