--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -166,7 +166,7 @@
         <ul class="list-unstyled mb-0">
           <li class="nav-small-cap">Menú</li>
           <li class="sidebar-item">
-            <a href="index.html" class="sidebar-link">
+            <a href="Dashboard.html" class="sidebar-link">
               <i class="bi bi-cart4"></i> Productos
             </a>
           </li>
@@ -177,7 +177,7 @@
           </li>
           <li class="nav-small-cap">Auth</li>
           <li class="sidebar-item">
-            <a href="./authentication-login.html" class="sidebar-link">
+            <a href="#" class="sidebar-link">
               <i class="bi bi-box-arrow-right"></i> Salir
             </a>
           </li>
