--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -216,7 +216,7 @@
             </li>
             <li class="nav-small-cap">Auth</li>
             <li class="sidebar-item">
-              <a href="./authentication-login.html" class="sidebar-link text-white">
+              <a href="#" class="sidebar-link text-white">
                 <i class="bi bi-box-arrow-right"></i> Salir
               </a>
             </li>
