--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -175,7 +175,7 @@
         <ul class="list-unstyled mb-0">
           <li class="nav-small-cap">Menú</li>
           <li class="sidebar-item">
-            <a href="index.html" class="sidebar-link">
+            <a href="Dashboard.html" class="sidebar-link">
               <i class="bi bi-cart4"></i> Productos
             </a>
           </li>
