--- a/Educación/single-educacion-imagen.html
+++ b/Educación/single-educacion-imagen.html
@@ -55,22 +55,7 @@
       box-shadow: 0 .125rem .375rem rgba(0,0,0,.1);
       text-align: center;
     }
-    /*imagen fondo
-  .header--image {
-    position: absolute;
-    top: 0px;
-    right: 11px;
-    width: 100%;
-    height: 100%;
-    opacity: 0.1;
-    padding-right: 55px;
-    background-size: contain !important;
-    background-repeat: no-repeat !important;
-    background-position: right center !important;
-    background-origin: content-box !important;
-}*/
-
-
+    
     /* Pestaña superior */
     .single-sidebar .sidebar-tab {
       font-size: 1rem;
@@ -240,8 +225,8 @@
 
         <!--<div class="tag-tipo">Tipo: Curso</div>-->
         
-        <a href="#full-text-info" class="tag-tipo text-white text-decoration-none">Mas detalles</a>
-        <a href="#curso-gratis-info" class="tag-gratis text-white text-decoration-none">+ Curso gratuito</a>
+        <a href="#full-text-info" class="tag-tipo text-white text-decoration-none" title="Pulsa para mas información">Mas detalles</a>
+        <a href="#curso-gratis-info" class="tag-gratis text-white text-decoration-none" title="Pulsa para mas información">+ Curso gratuito</a>
       </div>
 
       <!-- Descripción larga -->
