adjustments inside stylesheet cards

--- a/html tienda componentes normalizacion/componente card catalogo.html
+++ b/html tienda componentes normalizacion/componente card catalogo.html
@@ -9,340 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <!-- ICONTEC Cards CSS -->
+    <link href="icontec-cards.css" rel="stylesheet">
 </head>
 
 <body>
-    <style>
-         /*Seccion enmiendas*/
-.icontec-card-action-bar {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    margin-top: 12px;
-    flex-direction: column;
-}
-.icontec-card-green-bar {
-    width: 0%;
-    height: 5px;
-    background: linear-gradient(90deg, #1ec773 60%, #0fa958 100%);
-    border-radius: 3px;
-    margin: 0 auto;
-    opacity: 0;
-    box-shadow: 0 2px 8px rgba(30,199,115,0.15);
-    transition: width 0.35s cubic-bezier(.4,1.4,.6,1), opacity 0.25s, box-shadow 0.3s;
-}
-.icontec-card-link:hover .icontec-card-green-bar {
-    opacity: 1;
-    width: 90%;
-    box-shadow: 0 4px 16px rgba(30,199,115,0.25);
-}
-.icontec-card-btn {
-    display: inline-block;
-    background: #0073aa;
-    color: #fff;
-    padding: 8px 18px;
-    border-radius: 4px;
-    text-decoration: none;
-    font-weight: 500;
-    margin-top: 8px;
-    transition: background 0.2s, box-shadow 0.2s, transform 0.2s;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.07);
-}
-.icontec-card-btn:focus, .icontec-card-btn:hover {
-    background: #005a87;
-    box-shadow: 0 2px 8px rgba(30,199,115,0.18);
-    transform: scale(1.08);
-    outline: none;
-}
-.icontec-card {
-    /* ...existing code... */
-    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-    transition: box-shadow 0.3s, transform 0.3s;
-    border-bottom: 3px solid transparent;
-}
-.icontec-card-img-container:hover .icontec-card {
-    /* ...existing code... */
-    border-bottom: 3px solid #1ec773;
-}
-
-
-.icontec-card {
-    position: relative;
-    overflow: hidden;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-    transition: box-shadow 0.3s, transform 0.3s;
-}
-
-/* Enlace que envuelve toda la card */
-.icontec-card-link {
-    text-decoration: none;
-    color: inherit;
-    display: block;
-}
-
-.icontec-card-link:hover {
-    text-decoration: none;
-    color: inherit;
-}
-
-.icontec-card-link:hover .icontec-card {
-    transform: translateY(-12px) scale(1.03);
-    box-shadow: 0 8px 24px rgba(0,0,0,0.18);
-}
-.icontec-card-img-container {
-    position: relative;
-    width: 100%;
-    display: block;
-}
-.icontec-card-img {
-    width: 100%;
-    display: block;
-    border-radius: 8px 8px 0 0;
-    transition: filter 0.3s;
-}
-.icontec-card-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.7);
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    padding: 24px 16px 16px 16px;
-    text-align: center;
-    border-radius: 8px 8px 0 0;
-    pointer-events: none;
-    z-index: 2;
-    transform: translateY(10px);
-    clip-path: circle(0% at 50% 0%);
-    transition: clip-path 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.3s ease 0.1s, transform 0.3s ease 0.1s;
-}
-.icontec-card-link:hover .icontec-card-overlay {
-    opacity: 1;
-    pointer-events: auto;
-    transform: translateY(0);
-    clip-path: circle(120% at 50% 0%);
-}
-.icontec-card-link:hover .icontec-card-img {
-    filter: brightness(0.5) grayscale(10%);
-    transition: filter 0.3s;
-}
-.icontec-card-title {
-    font-size: 1.1rem;
-    font-weight: 600;
-    margin: 12px 0 6px 0;
-    color: #222;
-    text-align: center;
-}
-.icontec-card img {
-    width: -webkit-fill-available;
-    height: auto;
-}
-.icontec-card-content {
-    font-size: 0.95rem;
-    color: #555;
-    margin-bottom: 10px;
-    text-align: center;
-}
-.icontec-card-btn {
-    display: inline-block;
-    background: #0073aa;
-    color: #fff;
-    padding: 8px 18px;
-    border-radius: 4px;
-    text-decoration: none;
-    font-weight: 500;
-    margin-top: 8px;
-    transition: background 0.2s;
-}
-.icontec-card-btn:hover {
-    background: #005a87;
-}
-.icontec-card .price {
-    font-size: 1.1rem;
-    color: #0073aa;
-    font-weight: 600;
-}
-/* Overlay contenido ordenado */
-.icontec-card-overlay-title {
-    font-size: 1.15rem;
-    font-weight: 700;
-    margin-bottom: 8px;
-}
-.icontec-card-overlay-content {
-    font-size: 1rem;
-    margin-bottom: 10px;
-    color: #e0e0e0;
-}
-.icontec-card-overlay-price {
-    font-size: 1.1rem;
-    color: #ffd700;
-    font-weight: 600;
-}
-
-/* Tabla de formatos */
-.icontec-card-format-table {
-    background: #f8f9fa;
-    margin-top: 8px;
-    border-radius: 0 0 8px 8px;
-    overflow: hidden;
-    transition: background 0.3s ease, transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94), box-shadow 0.3s ease;
-    box-shadow: 0 0 0 rgba(30, 199, 115, 0);
-    border: 2px solid #e9ecef;
-    border-top: none;
-    position: relative;
-}
-
-.icontec-card-format-table::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background: linear-gradient(90deg, #0073aa 0%, #1ec773 100%);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.icontec-card-link:hover .icontec-card-format-table {
-    background: #e8f5e8;
-    transform: translateY(0) scale(1);
-    box-shadow: 0 4px 12px rgba(30, 199, 115, 0.1);
-    border-color: #1ec773;
-}
-
-.icontec-card-link:hover .icontec-card-format-table::after {
-    opacity: 1;
-}
-
-.format-option {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 8px 16px;
-    border-bottom: 1px solid #e9ecef;
-    transition: all 0.3s ease;
-    border: #333 solid 1px;
-    transform: translateY(10px);
-    box-shadow: 0 0 0 rgba(30, 199, 115, 0);
-}
-
-.icontec-card-link:hover .format-option {
-    transform: translateY(0);
-    box-shadow: 0 2px 8px rgba(30, 199, 115, 0.15);
-}
-
-.icontec-card-link:hover .format-option:nth-child(1) {
-    transition-delay: 0.1s;
-}
-
-.icontec-card-link:hover .format-option:nth-child(2) {
-    transition-delay: 0.2s;
-}
-
-.format-option:last-child {
-    border-bottom: 3px solid #0073aa;
-    border-radius: 0 0 6px 6px;
-    position: relative;
-    overflow: hidden;
-}
-
-.format-option:last-child::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 3px;
-    background: linear-gradient(90deg, #1ec773, #0073aa);
-    transition: width 0.4s ease;
-}
-
-.icontec-card-link:hover .format-option:last-child::after {
-    width: 100%;
-}
-
-.format-option i {
-    color: #0073aa;
-    font-size: 1.1rem;
-    margin-right: 8px;
-    transition: color 0.3s ease;
-
-}
-
-.format-option span {
-    flex: 1;
-    font-size: 0.9rem;
-    font-weight: 500;
-    color: #333;
-}
-
-.format-price {
-    color: #1ec773 !important;
-    font-weight: 600 !important;
-    font-size: 0.95rem !important;
-    text-shadow: 0 0 0 transparent;
-    transition: text-shadow 0.3s ease;
-}
-
-.icontec-card-link:hover .format-price {
-    text-shadow: 0 1px 3px rgba(30, 199, 115, 0.4);
-}
-
-.icontec-card-link:hover .format-option i {
-    color: #1ec773;
-}
-
-.icontec-card-link:hover .format-option span {
-    color: #2d5a3d;
-}
-
-
-
-
-    
-
-
-
-
-h2{
-    color: #fff;
-}
-
-/* Etiqueta de vigencia */
-.icontec-card-vigencia {
-    display: inline-block;
-    width: auto;
-    background: linear-gradient(135deg, #1ec773, #0fa958);
-    color: white;
-    padding: 4px 12px;
-    border-radius: 20px;
-    font-size: 0.75rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    box-shadow: 0 2px 8px rgba(30, 199, 115, 0.3);
-    z-index: 3;
-    margin: 0 auto;
-    text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.icontec-card-link:hover .icontec-card-vigencia {
-    transform: scale(1.05);
-    box-shadow: 0 4px 12px rgba(30, 199, 115, 0.4);
-}
-    </style>
 
 
 <div class="container">   
