--- a/html tienda componentes normalizacion/singlenormalizacion.html
+++ b/html tienda componentes normalizacion/singlenormalizacion.html
@@ -33,7 +33,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-family: 'Catamaran', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             margin: 0;
             padding: 0;
             background: var(--gray-light);
