--- a/Educación/Dashboard.html
+++ b/Educación/Dashboard.html
@@ -39,7 +39,7 @@
     /* Sidebar */
     .left-sidebar {
       width: 260px;
-       background: linear-gradient(180deg, #004085, #004085);
+       background: linear-gradient(180deg, #0073aa, #1ec773);
       color: #fff;
       position: fixed; top: 0; bottom: 0;
       overflow-y: auto;
@@ -111,7 +111,7 @@
     }
     .card-title {
       font-size: 1.25rem; font-weight: 600;
-      color: #0d6efd;
+      color: #000000;
     }
 
     /* Table */
@@ -170,9 +170,9 @@
   <div class="page-wrapper" id="main-wrapper">
     <!-- Desktop Sidebar -->
     <aside class="left-sidebar d-none d-lg-block">
-      <div class="brand-logo">
+      <!--<div class="brand-logo">
         <img src="https://tienda.icontec.org/pub/media/Hipertexto/main/logotipo.svg" alt="ICONTEC">
-      </div>
+      </div>-->
       <nav class="sidebar-nav">
         <ul class="list-unstyled mb-0">
           <li class="nav-small-cap">Menú</li>
@@ -241,10 +241,10 @@
 
             <!-- Desktop title & search -->
             <h5 class="d-none d-lg-block mb-0">Dashboard</h5>
-            <form class="d-none d-lg-flex ms-4 w-50" role="search">
+           <!---- <form class="d-none d-lg-flex ms-4 w-50" role="search">
               <input class="form-control form-control-sm me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
               <button class="btn btn-sm btn-outline-primary" type="submit"><i class="bi bi-search"></i></button>
-            </form>
+            </form>-->
           </div>
         </nav>
       </header>
