--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -43,7 +43,7 @@
     /* ==== Sidebar ==== */
     .left-sidebar {
       width: 260px;
-      background: linear-gradient(180deg, #004085, #004085);
+      background: linear-gradient(180deg,#0073aa, #1ec773);
       color: #fff;
       position: fixed; top: 0; bottom: 0;
       overflow-y: auto;
@@ -124,7 +124,7 @@
     .card-title {
       font-size: 1.25rem;
       font-weight: 600;
-      color: #0d6efd;
+      color: #000000;
     }
 
     /* ==== Forms ==== */
@@ -168,9 +168,9 @@
   <div class="page-wrapper" id="main-wrapper">
     <!-- Sidebar desktop -->
     <aside class="left-sidebar d-none d-lg-block">
-      <div class="brand-logo">
+      <!--<div class="brand-logo">
         <img src="https://tienda.icontec.org/pub/media/Hipertexto/main/logotipo.svg" alt="ICONTEC">
-      </div>
+      </div>-->
       <nav class="sidebar-nav">
         <ul class="list-unstyled mb-0">
           <li class="nav-small-cap">Menú</li>
