--- a/Educación/single-educacion-imagen.html
+++ b/Educación/single-educacion-imagen.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Normatividad Técnica – Detalle del Curso</title>
+  <title>Detalle del Curso -Tienda ICONTEC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
