--- a/Educación/single-educacion-imagen copy.html
+++ b/Educación/single-educacion-imagen copy.html
@@ -652,8 +652,11 @@
             <!-- Información del producto -->
             <div class="product-info">
                 <div class="reference-code">
-                    NTC-ISO 12966-4:2015
+                   Curso - Virtual
                 </div>
+                  <a class="reference-code" href="#full-text-info">
+                    Mas detalles.
+                  </a>
 
                 <h1 class="product-title">
                     Grasas y aceites animales y vegetales. Cromatografía de gases de ésteres metílicos de ácidos grasos. Parte 4: Determinación por cromatografía capilar de gases
