--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -43,7 +43,7 @@
     /* ==== Sidebar ==== */
     .left-sidebar {
       width: 260px;
-      background: linear-gradient(180deg,#0073aa, #1ec773);
+      background: linear-gradient(45deg, #0073A9, #1ec773);
       color: #fff;
       position: fixed; top: 0; bottom: 0;
       overflow-y: auto;
@@ -93,7 +93,7 @@
     /* ==== Offcanvas (mobile sidebar) ==== */
     .offcanvas-start {
       width: 260px;
-      background: linear-gradient(180deg, #0d6efd, #004085);
+      background: linear-gradient(45deg, #0073A9, #1ec773);
       color: #fff;
     }
     .offcanvas-header {
@@ -142,8 +142,8 @@
 
     /* ==== Botones ==== */
     .btn-primary {
-      background-color: #0d6efd;
-      border-color: #0d6efd;
+      background-color: linear-gradient(45deg, #0073A9, #1ec773);
+     /* border-color: #0d6efd;*/
       border-radius: .5rem;
       font-weight: 600;
     }
@@ -214,12 +214,12 @@
                 <i class="bi bi-person-circle"></i> Perfil
               </a>
             </li>
-            <li class="nav-small-cap">Auth</li>
+           <!-- <li class="nav-small-cap">Auth</li>
             <li class="sidebar-item">
               <a href="#" class="sidebar-link text-white">
                 <i class="bi bi-box-arrow-right"></i> Salir
               </a>
-            </li>
+            </li>-->
           </ul>
         </nav>
       </div>
