--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -142,7 +142,7 @@
 
     /* ==== Botones ==== */
     .btn-primary {
-      background-color: linear-gradient(45deg, #0073A9, #1ec773);
+      background: linear-gradient(45deg, #0073A9, #1ec773);
      /* border-color: #0d6efd;*/
       border-radius: .5rem;
       font-weight: 600;
