--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -184,12 +184,12 @@
               <i class="bi bi-person-circle"></i> Perfil
             </a>
           </li>
-          <li class="nav-small-cap">Auth</li>
+          <!--<li class="nav-small-cap">Auth</li>
           <li class="sidebar-item">
             <a href="#" class="sidebar-link">
               <i class="bi bi-box-arrow-right"></i> Salir
             </a>
-          </li>
+          </li>-->
         </ul>
       </nav>
     </aside>
