--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -148,8 +148,8 @@
       font-weight: 600;
     }
     .btn-primary:hover {
-      background-color: #0056b3;
-      border-color: #0056b3;
+      background:  linear-gradient(45deg, #0073A9, #1ec773);
+      /*border-color: #0056b3;*/
     }
     .btn-outline-primary {
       border-radius: .5rem;
