--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -155,6 +155,10 @@
       border-radius: .5rem;
       font-weight: 600;
     }
+    .btn:hover{
+       background:  linear-gradient(45deg, #0073A9, #1ec773);
+
+    }
     /*imagen perfil */
 .rounded-circle {
     border-radius: 50% !important;
