--- a/Educación/Perfil.html
+++ b/Educación/Perfil.html
@@ -156,7 +156,7 @@
       font-weight: 600;
     }
     .btn:hover{
-       background:  linear-gradient(45deg, #0073A9, #1ec773);
+       background:  linear-gradient(45deg, #0073A9, #1ec773) !important;
 
     }
     /*imagen perfil */
