--- a/html tienda componentes normalizacion/breadcumbs.html
+++ b/html tienda componentes normalizacion/breadcumbs.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Google Fonts - Catamaran -->
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
     <title>Document</title>
 </head>
 
@@ -22,6 +25,11 @@
         }
 
     
+
+          body {
+            font-family: 'Catamaran', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+  
+        }
 
         /* Breadcrumb */
         .product-breadcrumb {
