--- a/Educación/Panel-lateral-carrito.html
+++ b/Educación/Panel-lateral-carrito.html
@@ -811,7 +811,8 @@
 
   .btn-checkout{
     background:linear-gradient(45deg, #0073A9, #1ec773);
-    color:#fff;border:0
+    color:#fff;
+    border:0;
   }
   .btn-continue{
     
@@ -824,7 +825,7 @@
   text-align:center;
   color:var(--accent, #0073aa);
   background:linear-gradient(90deg,#f1f3f5,#ffffff);
-  border:1px solid rgba(255, 255, 255, 0.06);
+  border:1px solid #0073aa;
   cursor:pointer;
   transition:background .18s ease, color .18s ease, transform .06s ease;
   }
