--- a/Educación/Pagina-Productos.html
+++ b/Educación/Pagina-Productos.html
@@ -182,7 +182,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="perfil.html" class="sidebar-link">
+            <a href="Pagina-perfil.html" class="sidebar-link">
               <i class="bi bi-person-circle"></i> Perfil
             </a>
           </li>
