--- a/Educación/Pagina-Perfil.html
+++ b/Educación/Pagina-Perfil.html
@@ -171,29 +171,21 @@
 
   <div class="page-wrapper" id="main-wrapper">
     <!-- Sidebar desktop -->
-    <aside class="left-sidebar d-none d-lg-block">
-      <!--<div class="brand-logo">
-        <img src="https://tienda.icontec.org/pub/media/Hipertexto/main/logotipo.svg" alt="ICONTEC">
-      </div>-->
+    <aside class="left-sidebar d-none d-lg-block"> 
       <nav class="sidebar-nav">
         <ul class="list-unstyled mb-0">
           <li class="nav-small-cap">Menú</li>
           <li class="sidebar-item">
-            <a href="Dashboard.html" class="sidebar-link">
+            <a href="Pagina-productos.html" class="sidebar-link">
               <i class="bi bi-cart4"></i> Productos
             </a>
           </li>
           <li class="sidebar-item">
-            <a href="perfil.html" class="sidebar-link active">
+            <a href="Pagina-perfil.html" class="sidebar-link active">
               <i class="bi bi-person-circle"></i> Perfil
             </a>
           </li>
-          <!--<li class="nav-small-cap">Auth</li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">
-              <i class="bi bi-box-arrow-right"></i> Salir
-            </a>
-          </li>-->
+         
         </ul>
       </nav>
     </aside>
@@ -209,21 +201,15 @@
           <ul class="list-unstyled mb-0">
             <li class="nav-small-cap">Menú</li>
             <li class="sidebar-item">
-              <a href="Dashboard.html" class="sidebar-link text-white">
+              <a href="Pagina-Productos.html" class="sidebar-link text-white">
                 <i class="bi bi-cart4"></i> Productos
               </a>
             </li>
             <li class="sidebar-item">
-              <a href="perfil.html" class="sidebar-link text-white">
+              <a href="Pagina-Perfil.html" class="sidebar-link text-white">
                 <i class="bi bi-person-circle"></i> Perfil
               </a>
-            </li>
-           <!-- <li class="nav-small-cap">Auth</li>
-            <li class="sidebar-item">
-              <a href="#" class="sidebar-link text-white">
-                <i class="bi bi-box-arrow-right"></i> Salir
-              </a>
-            </li>-->
+            </li>        
           </ul>
         </nav>
       </div>
