--- a/Educación/Pagina-Productos.html
+++ b/Educación/Pagina-Productos.html
@@ -169,10 +169,7 @@
 
   <div class="page-wrapper" id="main-wrapper">
     <!-- Desktop Sidebar -->
-    <aside class="left-sidebar d-none d-lg-block">
-      <!--<div class="brand-logo">
-        <img src="https://tienda.icontec.org/pub/media/Hipertexto/main/logotipo.svg" alt="ICONTEC">
-      </div>-->
+    <aside class="left-sidebar d-none d-lg-block">    
       <nav class="sidebar-nav">
         <ul class="list-unstyled mb-0">
           <li class="nav-small-cap">Menú</li>
@@ -186,12 +183,7 @@
               <i class="bi bi-person-circle"></i> Perfil
             </a>
           </li>
-          <!--<li class="nav-small-cap">Auth</li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">
-              <i class="bi bi-box-arrow-right"></i> Salir
-            </a>
-          </li>-->
+        
         </ul>
       </nav>
     </aside>
@@ -212,16 +204,10 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a href="perfil.html" class="sidebar-link text-white">
+              <a href="Pagina-Perfil.html" class="sidebar-link text-white">
                 <i class="bi bi-person-circle"></i> Perfil
               </a>
-            </li>
-            <!--<li class="nav-small-cap">Auth</li>
-            <li class="sidebar-item">
-              <a href="#" class="sidebar-link text-white">
-                <i class="bi bi-box-arrow-right"></i> Salir
-              </a>
-            </li>-->
+            </li>         
           </ul>
         </nav>
       </div>
