--- a/Educación/catalogo-educacion.html
+++ b/Educación/catalogo-educacion.html
@@ -24,10 +24,10 @@
     }
 
     body {
-      font-family: 'Hind', sans-serif;
-      background: #f5f5f5;
-      color: #4d5974;
-      padding: 20px;
+      font-family: 'Catamaran';
+       background: #f5f5f5;
+  color: #212529;
+  padding: 20px;
     }
 
     h1 {
